--- a/docs/404.css
+++ b/docs/404.css
@@ -4,9 +4,8 @@
 
 .u-section-1 .u-group-1 {
   width: 800px;
-  min-height: 713px;
+  min-height: 737px;
   background-image: none;
-  height: auto;
   margin: 58px auto 60px;
 }
 
@@ -28,7 +27,7 @@
 .u-section-1 .u-text-2 {
   font-size: 1.6875rem;
   font-weight: 700;
-  margin: 60px auto 0 0;
+  margin: 60px 14px 0 0;
 }
 
 .u-section-1 .u-btn-1 {
@@ -43,7 +42,6 @@
 
 .u-section-1 .u-search-1 {
   width: 200px;
-  height: auto;
   min-height: 38px;
   margin: 23px auto 0;
 }
@@ -57,6 +55,12 @@
   font-size: 1.25rem;
 }
 
+@media (max-width: 1199px) {
+  .u-section-1 .u-search-1 {
+    height: auto;
+  }
+}
+
 @media (max-width: 991px) {
   .u-section-1 .u-group-1 {
     width: 720px;
@@ -65,6 +69,10 @@
   .u-section-1 .u-container-layout-1 {
     padding-left: 30px;
     padding-right: 30px;
+  }
+
+  .u-section-1 .u-text-2 {
+    margin-right: 0;
   }
 }
 
