--- a/docs/404.css
+++ b/docs/404.css
@@ -1,4 +1,5 @@
 .u-section-1 {
+  background-image: url("images/Green-laboratory.jpg");
   background-position: 50% 50%;
 }
 
@@ -8,9 +9,8 @@
 
 .u-section-1 .u-group-1 {
   width: 800px;
-  min-height: 736px;
+  min-height: 747px;
   background-image: none;
-  height: auto;
   margin: 59px auto 50px;
 }
 
@@ -45,11 +45,19 @@
   margin: 44px auto 0;
 }
 
-.u-section-1 .u-custom-html-1 {
-  min-height: 52px;
-  height: auto;
-  width: 352px;
-  margin: 0 auto;
+.u-section-1 .u-search-1 {
+  width: 298px;
+  min-height: 44px;
+  margin: 27px auto 0;
+}
+
+.u-section-1 .u-search-icon-1 {
+  background-image: none;
+  font-size: 1.25rem;
+}
+
+.u-section-1 .u-search-input-1 {
+  font-weight: 400;
 }
 
 @media (max-width: 1199px) {
@@ -59,6 +67,10 @@
 
   .u-section-1 .u-sheet-1 {
     min-height: 697px;
+  }
+
+  .u-section-1 .u-search-1 {
+    height: auto;
   }
 }
 
@@ -141,9 +153,5 @@
 
   .u-section-1 .u-btn-1 {
     align-self: center;
-  }
-
-  .u-section-1 .u-custom-html-1 {
-    width: 320px;
   }
 }
