--- a/docs/Ask-Green-Your-Lab.css
+++ b/docs/Ask-Green-Your-Lab.css
@@ -12,6 +12,7 @@
 .u-section-1 .u-image-1 {
   min-height: 378px;
   pointer-events: auto;
+  background-image: url("images/GreenYourLab.jpg");
   background-position: 50% 50%;
 }
 
@@ -58,6 +59,7 @@
 }
 
 .u-section-1 .u-image-2 {
+  background-image: url("images/twitter.png");
   background-position: 50% 50%;
 }
 
@@ -66,6 +68,7 @@
 }
 
 .u-section-1 .u-image-3 {
+  background-image: url("images/facebook.png");
   background-position: 50% 50%;
 }
 
@@ -112,7 +115,9 @@
   }
 
   .u-section-1 .u-container-layout-1 {
-    padding: 19px 30px 0;
+    padding-top: 19px;
+    padding-left: 30px;
+    padding-right: 30px;
   }
 
   .u-section-1 .u-group-1 {
@@ -317,10 +322,6 @@
 @media (max-width: 991px) {
   .u-section-2 .u-group-1 {
     width: 720px;
-  }
-
-  .u-section-2 .u-container-layout-1 {
-    padding-bottom: 0;
   }
 
   .u-section-2 .u-btn-1 {
