--- a/docs/Green-Lab.css
+++ b/docs/Green-Lab.css
@@ -12,6 +12,7 @@
 .u-section-1 .u-image-1 {
   min-height: 378px;
   pointer-events: auto;
+  background-image: url("images/GreenYourLab.jpg");
   background-position: 50% 50%;
 }
 
@@ -58,6 +59,7 @@
 }
 
 .u-section-1 .u-image-2 {
+  background-image: url("images/twitter.png");
   background-position: 50% 50%;
 }
 
@@ -66,6 +68,7 @@
 }
 
 .u-section-1 .u-image-3 {
+  background-image: url("images/facebook.png");
   background-position: 50% 50%;
 }
 
@@ -112,7 +115,9 @@
   }
 
   .u-section-1 .u-container-layout-1 {
-    padding: 19px 30px 0;
+    padding-top: 19px;
+    padding-left: 30px;
+    padding-right: 30px;
   }
 
   .u-section-1 .u-group-1 {
@@ -246,13 +251,13 @@
     margin-bottom: 14px;
   }
 }.u-section-2 .u-sheet-1 {
-  min-height: 67px;
+  min-height: 86px;
 }
 
 .u-section-2 .u-group-1 {
-  width: 800px;
-  min-height: 47px;
-  margin: 20px auto 0;
+  width: 1016px;
+  min-height: 56px;
+  margin: 30px auto 0;
 }
 
 .u-section-2 .u-container-layout-1 {
@@ -263,40 +268,43 @@
   border-style: solid;
   font-weight: 700;
   text-transform: uppercase;
-  font-size: 0.875rem;
+  font-size: 1.25rem;
   letter-spacing: 1px;
   background-image: none;
   margin: -30px auto 0 20px;
-  padding: 10px 50px;
+  padding: 10px 58px;
 }
 
 .u-section-2 .u-btn-2 {
   border-style: solid;
   font-weight: 700;
   text-transform: uppercase;
-  font-size: 0.875rem;
+  font-size: 1.25rem;
   letter-spacing: 1px;
-  margin: -46px auto 0;
+  margin: -56px auto 0;
 }
 
 .u-section-2 .u-btn-3 {
   border-style: solid;
   font-weight: 700;
   text-transform: uppercase;
-  font-size: 0.875rem;
+  font-size: 1.25rem;
   letter-spacing: 1px;
-  margin: -46px 10px 0 auto;
-  padding: 10px 46px 10px 45px;
+  margin: -56px 10px 0 auto;
+  padding: 10px 52px 10px 51px;
 }
 
 @media (max-width: 1199px) {
   .u-section-2 .u-sheet-1 {
-    min-height: 65px;
+    min-height: 77px;
   }
 
   .u-section-2 .u-group-1 {
-    min-height: 48px;
+    min-height: 59px;
     margin-top: 18px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
   }
 
   .u-section-2 .u-container-layout-1 {
@@ -304,39 +312,43 @@
   }
 
   .u-section-2 .u-btn-1 {
-    margin-top: 2px;
-    margin-left: 7px;
+    align-self: center;
+    margin-top: 0;
+    margin-left: 0;
+  }
+
+  .u-section-2 .u-btn-2 {
+    align-self: center;
+    margin-top: -57px;
   }
 
   .u-section-2 .u-btn-3 {
-    margin-top: -47px;
-    margin-right: 215px;
-    margin-left: 542px;
+    margin-top: -55px;
+    margin-right: 0;
   }
 }
 
 @media (max-width: 991px) {
-  .u-section-2 .u-group-1 {
-    width: 720px;
-  }
-
-  .u-section-2 .u-container-layout-1 {
-    padding-bottom: 0;
-  }
-
   .u-section-2 .u-btn-1 {
-    margin-left: 0;
+    margin-left: -30px;
+  }
+
+  .u-section-2 .u-btn-2 {
+    margin-top: -56px;
   }
 
   .u-section-2 .u-btn-3 {
-    margin-right: 0;
-    margin-left: 462px;
+    margin-top: -56px;
+    margin-right: -30px;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-2 .u-group-1 {
-    width: 540px;
+    min-height: 66px;
+    width: 589px;
+    margin-left: -25px;
+    margin-right: -25px;
   }
 
   .u-section-2 .u-container-layout-1 {
@@ -344,9 +356,21 @@
     padding-right: 10px;
   }
 
+  .u-section-2 .u-btn-1 {
+    margin-left: -10px;
+    padding-left: 38px;
+    padding-right: 38px;
+  }
+
+  .u-section-2 .u-btn-2 {
+    padding: 10px;
+  }
+
   .u-section-2 .u-btn-3 {
-    margin-top: -48px;
-    margin-left: auto;
+    margin-top: -55px;
+    margin-right: -10px;
+    padding-right: 32px;
+    padding-left: 31px;
   }
 }
 
@@ -357,11 +381,9 @@
 
   .u-section-2 .u-group-1 {
     min-height: 229px;
-    margin-top: 1px;
-    margin-bottom: 1px;
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
+    width: 340px;
+    margin-left: 0;
+    margin-right: auto;
   }
 
   .u-section-2 .u-container-layout-1 {
@@ -371,16 +393,22 @@
   .u-section-2 .u-btn-1 {
     margin-top: 29px;
     margin-left: auto;
+    padding-left: 58px;
+    padding-right: 58px;
   }
 
   .u-section-2 .u-btn-2 {
     margin-top: 23px;
+    padding-left: 30px;
+    padding-right: 30px;
   }
 
   .u-section-2 .u-btn-3 {
     margin-top: 23px;
     margin-right: auto;
     margin-bottom: -14px;
+    padding-right: 52px;
+    padding-left: 51px;
   }
 }.u-section-3 {
   background-image: none;
