--- a/docs/Green-Lab.css
+++ b/docs/Green-Lab.css
@@ -290,6 +290,7 @@
   text-transform: uppercase;
   font-size: 1.25rem;
   letter-spacing: 1px;
+  background-image: none;
   margin: -56px 10px 0 auto;
   padding: 10px 52px 10px 51px;
 }
