--- a/docs/Sustainability.css
+++ b/docs/Sustainability.css
@@ -480,6 +480,14 @@
   padding: 0;
 }
 
+.u-section-3 .u-btn-3 {
+  padding: 0;
+}
+
+.u-section-3 .u-btn-4 {
+  padding: 0;
+}
+
 .u-section-3 .u-tab-pane-2 {
   background-image: none;
   margin-top: 0;
@@ -502,7 +510,7 @@
   margin: -209px -20px 0 190px;
 }
 
-.u-section-3 .u-btn-3 {
+.u-section-3 .u-btn-5 {
   padding: 0;
 }
 
