--- a/docs/Sustainability.css
+++ b/docs/Sustainability.css
@@ -514,6 +514,18 @@
   padding: 0;
 }
 
+.u-section-3 .u-btn-6 {
+  padding: 0;
+}
+
+.u-section-3 .u-btn-7 {
+  padding: 0;
+}
+
+.u-section-3 .u-btn-8 {
+  padding: 0;
+}
+
 @media (max-width: 1199px) {
   .u-section-3 .u-tabs-1 {
     height: auto;
