--- a/docs/Sustainability-Environment.css
+++ b/docs/Sustainability-Environment.css
@@ -689,7 +689,7 @@
 
 .u-section-5 .u-text-2 {
   font-style: italic;
-  margin: -85px 0 0 1009px;
+  margin: -85px 0 0 985px;
 }
 
 .u-section-5 .u-text-3 {
@@ -706,8 +706,7 @@
 .u-section-5 .u-video-1 {
   width: 456px;
   height: 68px;
-  filter: brightness(0);
-  margin: 51px auto 59px;
+  margin: 51px auto 60px;
 }
 
 @media (max-width: 1199px) {
@@ -735,7 +734,7 @@
 
   .u-section-5 .u-text-2 {
     margin-top: -1445px;
-    margin-left: 809px;
+    margin-left: 785px;
   }
 
   .u-section-5 .u-text-3 {
@@ -743,6 +742,7 @@
   }
 
   .u-section-5 .u-video-1 {
+    filter: brightness(0);
     margin-top: -1369px;
     margin-bottom: 85px;
   }
@@ -760,7 +760,7 @@
 
   .u-section-5 .u-text-2 {
     margin-top: -1349px;
-    margin-left: 589px;
+    margin-left: 565px;
   }
 
   .u-section-5 .u-text-3 {
@@ -799,7 +799,7 @@
 
   .u-section-5 .u-text-2 {
     margin-top: -1667px;
-    margin-left: 409px;
+    margin-left: 385px;
   }
 
   .u-section-5 .u-text-3 {
@@ -831,7 +831,7 @@
 
   .u-section-5 .u-text-2 {
     margin-top: 370px;
-    margin-left: 209px;
+    margin-left: 185px;
   }
 
   .u-section-5 .u-text-3 {
@@ -873,7 +873,7 @@
 
 .u-section-6 .u-text-2 {
   font-style: italic;
-  margin: -85px 0 0 995px;
+  margin: -85px 0 0 975px;
 }
 
 .u-section-6 .u-text-3 {
@@ -890,14 +890,10 @@
 .u-section-6 .u-video-1 {
   width: 456px;
   height: 68px;
-  margin: 30px auto -20px;
+  margin: 30px auto 60px 342px;
 }
 
 @media (max-width: 1199px) {
-  .u-section-6 .u-sheet-1 {
-    min-height: 954px;
-  }
-
   .u-section-6 .u-image-1 {
     background-position: 50% 50%;
     margin-right: initial;
@@ -918,15 +914,11 @@
 
   .u-section-6 .u-text-2 {
     margin-top: -1445px;
-    margin-left: 795px;
+    margin-left: 775px;
   }
 
   .u-section-6 .u-text-3 {
     margin-top: 1444px;
-  }
-
-  .u-section-6 .u-video-1 {
-    margin-bottom: 80px;
   }
 }
 
@@ -938,12 +930,16 @@
 
   .u-section-6 .u-text-2 {
     margin-top: -1349px;
-    margin-left: 575px;
+    margin-left: 555px;
   }
 
   .u-section-6 .u-text-3 {
     width: 720px;
     margin-top: 1348px;
+  }
+
+  .u-section-6 .u-video-1 {
+    margin-left: 264px;
   }
 }
 
@@ -968,12 +964,16 @@
 
   .u-section-6 .u-text-2 {
     margin-top: -1667px;
-    margin-left: 395px;
+    margin-left: 375px;
   }
 
   .u-section-6 .u-text-3 {
     width: 540px;
     margin-top: 1666px;
+  }
+
+  .u-section-6 .u-video-1 {
+    margin-left: 84px;
   }
 }
 
@@ -991,7 +991,7 @@
 
   .u-section-6 .u-text-2 {
     margin-top: 370px;
-    margin-left: 195px;
+    margin-left: 175px;
   }
 
   .u-section-6 .u-text-3 {
@@ -1001,6 +1001,7 @@
 
   .u-section-6 .u-video-1 {
     width: 340px;
+    margin-left: 0;
   }
 }.u-section-7 .u-sheet-1 {
   min-height: 605px;
