--- a/Green-Lab-Other.css
+++ b/Green-Lab-Other.css
@@ -552,18 +552,20 @@
     margin-top: -52px;
   }
 }.u-section-4 .u-sheet-1 {
-  min-height: 1280px;
+  min-height: 977px;
 }
 
 .u-section-4 .u-image-1 {
   height: 423px;
-  object-position: 50% 86.02%;
-  margin: 20px 0 0 auto;
+  object-position: 50% 10.58%;
+  margin-top: 20px;
+  margin-bottom: 0;
+  margin-left: 0;
 }
 
 .u-section-4 .u-group-1 {
   width: 800px;
-  min-height: 67px;
+  min-height: 149px;
   margin: -99px 155px 0 auto;
 }
 
@@ -572,10 +574,9 @@
 }
 
 .u-section-4 .u-text-1 {
-  width: 573px;
   font-weight: 700;
-  background-image: none;
   font-style: normal;
+  width: 573px;
   margin: -13px auto 0;
 }
 
@@ -586,35 +587,18 @@
   margin: 20px 0 80px;
 }
 
-.u-section-4 .u-btn-1 {
-  padding: 0;
-}
-
-.u-section-4 .u-btn-2 {
-  padding: 0;
-}
-
-.u-section-4 .u-btn-3 {
-  padding: 0;
-}
-
-.u-section-4 .u-btn-4 {
-  padding: 0;
-}
-
 @media (max-width: 1199px) {
   .u-section-4 .u-sheet-1 {
-    min-height: 1557px;
+    min-height: 762px;
   }
 
   .u-section-4 .u-image-1 {
     background-position: 50% 50%;
-    margin-right: initial;
     margin-left: initial;
   }
 
   .u-section-4 .u-group-1 {
-    min-height: 202px;
+    min-height: 155px;
     margin-top: 0;
     margin-right: initial;
     margin-left: initial;
@@ -624,36 +608,35 @@
   .u-section-4 .u-text-1 {
     margin-top: 0;
   }
-
-  .u-section-4 .u-text-2 {
-    margin-top: 0;
-    margin-bottom: -597px;
-  }
 }
 
 @media (max-width: 991px) {
   .u-section-4 .u-sheet-1 {
-    min-height: 1685px;
+    min-height: 977px;
+  }
+
+  .u-section-4 .u-group-1 {
+    min-height: 149px;
+    margin-top: -99px;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
   }
 
   .u-section-4 .u-text-1 {
+    margin-top: -13px;
     margin-left: 44px;
     margin-right: 44px;
-  }
-
-  .u-section-4 .u-text-2 {
-    width: 720px;
-    margin-bottom: -80px;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-4 .u-sheet-1 {
-    min-height: 2091px;
+    min-height: 729px;
   }
 
   .u-section-4 .u-group-1 {
-    min-height: 256px;
+    min-height: 157px;
     width: auto;
     margin-right: initial;
     margin-left: initial;
@@ -672,17 +655,16 @@
 
   .u-section-4 .u-text-2 {
     width: 540px;
-    margin-bottom: -444px;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-4 .u-sheet-1 {
-    min-height: 2759px;
+    min-height: 758px;
   }
 
   .u-section-4 .u-group-1 {
-    min-height: 188px;
+    min-height: 129px;
     width: auto;
     margin-right: initial;
     margin-left: initial;
@@ -694,21 +676,20 @@
 
   .u-section-4 .u-text-2 {
     width: 340px;
-    margin-bottom: -753px;
   }
 }.u-section-5 .u-sheet-1 {
-  min-height: 2645px;
+  min-height: 1280px;
 }
 
 .u-section-5 .u-image-1 {
   height: 423px;
-  object-position: 50% 67.54%;
-  margin: 20px auto 0 0;
+  object-position: 50% 86.02%;
+  margin: 20px 0 0 auto;
 }
 
 .u-section-5 .u-group-1 {
   width: 800px;
-  min-height: 149px;
+  min-height: 67px;
   margin: -99px 155px 0 auto;
 }
 
@@ -717,26 +698,26 @@
 }
 
 .u-section-5 .u-text-1 {
-  font-weight: 700;
-  font-style: normal;
   width: 573px;
+  font-weight: 700;
+  background-image: none;
+  font-style: normal;
   margin: -13px auto 0;
-}
-
-.u-section-5 .u-btn-1 {
-  margin-top: 0;
-  padding: 0;
-}
-
-.u-section-5 .u-btn-2 {
-  padding: 0;
 }
 
 .u-section-5 .u-text-2 {
   font-size: 1.25rem;
   font-weight: 400;
   line-height: 1.6;
-  margin: 20px 0 0;
+  margin: 20px 0 80px;
+}
+
+.u-section-5 .u-btn-1 {
+  padding: 0;
+}
+
+.u-section-5 .u-btn-2 {
+  padding: 0;
 }
 
 .u-section-5 .u-btn-3 {
@@ -747,106 +728,9 @@
   padding: 0;
 }
 
-.u-section-5 .u-btn-5 {
-  margin-top: 0;
-  padding: 0;
-}
-
-.u-section-5 .u-btn-6 {
-  padding: 0;
-}
-
-.u-section-5 .u-btn-7 {
-  padding: 0;
-}
-
-.u-section-5 .u-btn-8 {
-  padding: 0;
-}
-
-.u-section-5 .u-btn-9 {
-  margin-top: 0;
-  padding: 0;
-}
-
-.u-section-5 .u-gallery-1 {
-  height: 1254px;
-  margin: 30px auto 80px 0;
-}
-
-.u-section-5 .u-gallery-inner-1 {
-  grid-gap: 0px 0px;
-  grid-template-columns: auto auto auto;
-}
-
-.u-section-5 .u-back-image-1 {
-  object-position: 50% 5.93%;
-}
-
-.u-section-5 .u-over-slide-1 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
-  padding: 20px;
-}
-
-.u-section-5 .u-over-slide-2 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
-  padding: 20px;
-}
-
-.u-section-5 .u-back-image-3 {
-  object-position: 50% 12.67%;
-}
-
-.u-section-5 .u-over-slide-3 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
-  padding: 20px;
-}
-
-.u-section-5 .u-back-image-4 {
-  object-position: 0% 50%;
-}
-
-.u-section-5 .u-over-slide-4 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
-  padding: 20px;
-}
-
-.u-section-5 .u-back-image-5 {
-  object-position: 100% 50%;
-}
-
-.u-section-5 .u-over-slide-5 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
-  padding: 20px;
-}
-
-.u-section-5 .u-over-slide-6 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
-  padding: 20px;
-}
-
-.u-section-5 .u-over-slide-7 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
-  padding: 20px;
-}
-
-.u-section-5 .u-back-image-8 {
-  object-position: 50% 6.55%;
-}
-
-.u-section-5 .u-over-slide-8 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
-  padding: 20px;
-}
-
-.u-section-5 .u-over-slide-9 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
-  padding: 20px;
-}
-
 @media (max-width: 1199px) {
   .u-section-5 .u-sheet-1 {
-    min-height: 2065px;
+    min-height: 1557px;
   }
 
   .u-section-5 .u-image-1 {
@@ -856,7 +740,7 @@
   }
 
   .u-section-5 .u-group-1 {
-    min-height: 155px;
+    min-height: 202px;
     margin-top: 0;
     margin-right: initial;
     margin-left: initial;
@@ -867,27 +751,15 @@
     margin-top: 0;
   }
 
-  .u-section-5 .u-gallery-1 {
-    height: 1034px;
-    margin-right: initial;
-    margin-left: initial;
-  }
-
-  .u-section-5 .u-gallery-inner-1 {
-    grid-template-columns: repeat(3, auto);
+  .u-section-5 .u-text-2 {
+    margin-top: 0;
+    margin-bottom: -597px;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-5 .u-sheet-1 {
-    min-height: 2057px;
-  }
-
-  .u-section-5 .u-group-1 {
-    min-height: 158px;
-    width: auto;
-    margin-right: initial;
-    margin-left: initial;
+    min-height: 1685px;
   }
 
   .u-section-5 .u-text-1 {
@@ -897,26 +769,17 @@
 
   .u-section-5 .u-text-2 {
     width: 720px;
-  }
-
-  .u-section-5 .u-gallery-1 {
-    height: 1244px;
-    margin-right: initial;
-    margin-left: initial;
-  }
-
-  .u-section-5 .u-gallery-inner-1 {
-    grid-template-columns: repeat(2, auto);
+    margin-bottom: -80px;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-5 .u-sheet-1 {
-    min-height: 4545px;
+    min-height: 2091px;
   }
 
   .u-section-5 .u-group-1 {
-    min-height: 197px;
+    min-height: 256px;
     width: auto;
     margin-right: initial;
     margin-left: initial;
@@ -935,26 +798,17 @@
 
   .u-section-5 .u-text-2 {
     width: 540px;
-  }
-
-  .u-section-5 .u-gallery-1 {
-    height: 3732px;
-    margin-right: initial;
-    margin-left: initial;
-  }
-
-  .u-section-5 .u-gallery-inner-1 {
-    grid-template-columns: repeat(1, auto);
+    margin-bottom: -444px;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-5 .u-sheet-1 {
-    min-height: 3163px;
+    min-height: 2759px;
   }
 
   .u-section-5 .u-group-1 {
-    min-height: 129px;
+    min-height: 188px;
     width: auto;
     margin-right: initial;
     margin-left: initial;
@@ -966,28 +820,15 @@
 
   .u-section-5 .u-text-2 {
     width: 340px;
-  }
-
-  .u-section-5 .u-gallery-1 {
-    height: 2350px;
-    margin-right: initial;
-    margin-left: initial;
-  }
-
-  .u-section-5 .u-back-image-4 {
-    object-position: 0% 0%;
-  }
-
-  .u-section-5 .u-back-image-5 {
-    object-position: 100% 0%;
+    margin-bottom: -753px;
   }
 }.u-section-6 .u-sheet-1 {
-  min-height: 605px;
+  min-height: 2645px;
 }
 
 .u-section-6 .u-image-1 {
   height: 423px;
-  object-position: 50% 50.84%;
+  object-position: 50% 67.54%;
   margin: 20px auto 0 0;
 }
 
@@ -1008,16 +849,130 @@
   margin: -13px auto 0;
 }
 
+.u-section-6 .u-btn-1 {
+  margin-top: 0;
+  padding: 0;
+}
+
+.u-section-6 .u-btn-2 {
+  padding: 0;
+}
+
 .u-section-6 .u-text-2 {
   font-size: 1.25rem;
   font-weight: 400;
   line-height: 1.6;
-  margin: 20px 0 80px;
+  margin: 20px 0 0;
+}
+
+.u-section-6 .u-btn-3 {
+  padding: 0;
+}
+
+.u-section-6 .u-btn-4 {
+  padding: 0;
+}
+
+.u-section-6 .u-btn-5 {
+  margin-top: 0;
+  padding: 0;
+}
+
+.u-section-6 .u-btn-6 {
+  padding: 0;
+}
+
+.u-section-6 .u-btn-7 {
+  padding: 0;
+}
+
+.u-section-6 .u-btn-8 {
+  padding: 0;
+}
+
+.u-section-6 .u-btn-9 {
+  margin-top: 0;
+  padding: 0;
+}
+
+.u-section-6 .u-gallery-1 {
+  height: 1254px;
+  margin: 30px auto 80px 0;
+}
+
+.u-section-6 .u-gallery-inner-1 {
+  grid-gap: 0px 0px;
+  grid-template-columns: auto auto auto;
+}
+
+.u-section-6 .u-back-image-1 {
+  object-position: 50% 5.93%;
+}
+
+.u-section-6 .u-over-slide-1 {
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
+  padding: 20px;
+}
+
+.u-section-6 .u-over-slide-2 {
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
+  padding: 20px;
+}
+
+.u-section-6 .u-back-image-3 {
+  object-position: 50% 12.67%;
+}
+
+.u-section-6 .u-over-slide-3 {
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
+  padding: 20px;
+}
+
+.u-section-6 .u-back-image-4 {
+  object-position: 0% 50%;
+}
+
+.u-section-6 .u-over-slide-4 {
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
+  padding: 20px;
+}
+
+.u-section-6 .u-back-image-5 {
+  object-position: 100% 50%;
+}
+
+.u-section-6 .u-over-slide-5 {
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
+  padding: 20px;
+}
+
+.u-section-6 .u-over-slide-6 {
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
+  padding: 20px;
+}
+
+.u-section-6 .u-over-slide-7 {
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
+  padding: 20px;
+}
+
+.u-section-6 .u-back-image-8 {
+  object-position: 50% 6.55%;
+}
+
+.u-section-6 .u-over-slide-8 {
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
+  padding: 20px;
+}
+
+.u-section-6 .u-over-slide-9 {
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
+  padding: 20px;
 }
 
 @media (max-width: 1199px) {
   .u-section-6 .u-sheet-1 {
-    min-height: 762px;
+    min-height: 2065px;
   }
 
   .u-section-6 .u-image-1 {
@@ -1038,42 +993,56 @@
     margin-top: 0;
   }
 
-  .u-section-6 .u-text-2 {
-    margin-bottom: -1367px;
+  .u-section-6 .u-gallery-1 {
+    height: 1034px;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-6 .u-gallery-inner-1 {
+    grid-template-columns: repeat(3, auto);
   }
 }
 
 @media (max-width: 991px) {
   .u-section-6 .u-sheet-1 {
-    min-height: 605px;
+    min-height: 2057px;
   }
 
   .u-section-6 .u-group-1 {
-    min-height: 149px;
-    margin-top: -99px;
+    min-height: 158px;
     width: auto;
     margin-right: initial;
     margin-left: initial;
   }
 
   .u-section-6 .u-text-1 {
-    margin-top: -13px;
     margin-left: 44px;
     margin-right: 44px;
   }
 
   .u-section-6 .u-text-2 {
-    margin-bottom: 80px;
+    width: 720px;
+  }
+
+  .u-section-6 .u-gallery-1 {
+    height: 1244px;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-6 .u-gallery-inner-1 {
+    grid-template-columns: repeat(2, auto);
   }
 }
 
 @media (max-width: 767px) {
   .u-section-6 .u-sheet-1 {
-    min-height: 729px;
+    min-height: 4545px;
   }
 
   .u-section-6 .u-group-1 {
-    min-height: 157px;
+    min-height: 197px;
     width: auto;
     margin-right: initial;
     margin-left: initial;
@@ -1092,13 +1061,22 @@
 
   .u-section-6 .u-text-2 {
     width: 540px;
-    margin-bottom: -1816px;
+  }
+
+  .u-section-6 .u-gallery-1 {
+    height: 3732px;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-6 .u-gallery-inner-1 {
+    grid-template-columns: repeat(1, auto);
   }
 }
 
 @media (max-width: 575px) {
   .u-section-6 .u-sheet-1 {
-    min-height: 758px;
+    min-height: 3163px;
   }
 
   .u-section-6 .u-group-1 {
@@ -1114,20 +1092,168 @@
 
   .u-section-6 .u-text-2 {
     width: 340px;
-    margin-bottom: 80px;
+  }
+
+  .u-section-6 .u-gallery-1 {
+    height: 2350px;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-6 .u-back-image-4 {
+    object-position: 0% 0%;
+  }
+
+  .u-section-6 .u-back-image-5 {
+    object-position: 100% 0%;
   }
 }.u-section-7 .u-sheet-1 {
-  min-height: 100px;
+  min-height: 605px;
+}
+
+.u-section-7 .u-image-1 {
+  height: 423px;
+  object-position: 50% 50.84%;
+  margin: 20px auto 0 0;
+}
+
+.u-section-7 .u-group-1 {
+  width: 800px;
+  min-height: 149px;
+  margin: -99px 155px 0 auto;
+}
+
+.u-section-7 .u-container-layout-1 {
+  padding: 30px 30px 11px;
 }
 
 .u-section-7 .u-text-1 {
+  font-weight: 700;
+  font-style: normal;
+  width: 573px;
+  margin: -13px auto 0;
+}
+
+.u-section-7 .u-text-2 {
+  font-size: 1.25rem;
+  font-weight: 400;
+  line-height: 1.6;
+  margin: 20px 0 80px;
+}
+
+@media (max-width: 1199px) {
+  .u-section-7 .u-sheet-1 {
+    min-height: 762px;
+  }
+
+  .u-section-7 .u-image-1 {
+    background-position: 50% 50%;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-7 .u-group-1 {
+    min-height: 155px;
+    margin-top: 0;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
+  }
+
+  .u-section-7 .u-text-1 {
+    margin-top: 0;
+  }
+
+  .u-section-7 .u-text-2 {
+    margin-bottom: -1367px;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-7 .u-sheet-1 {
+    min-height: 605px;
+  }
+
+  .u-section-7 .u-group-1 {
+    min-height: 149px;
+    margin-top: -99px;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-7 .u-text-1 {
+    margin-top: -13px;
+    margin-left: 44px;
+    margin-right: 44px;
+  }
+
+  .u-section-7 .u-text-2 {
+    margin-bottom: 80px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-7 .u-sheet-1 {
+    min-height: 729px;
+  }
+
+  .u-section-7 .u-group-1 {
+    min-height: 157px;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-7 .u-container-layout-1 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-7 .u-text-1 {
+    margin-left: 0;
+    margin-right: 0;
+    width: 520px;
+  }
+
+  .u-section-7 .u-text-2 {
+    width: 540px;
+    margin-bottom: -1816px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-7 .u-sheet-1 {
+    min-height: 758px;
+  }
+
+  .u-section-7 .u-group-1 {
+    min-height: 129px;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-7 .u-text-1 {
+    width: 320px;
+  }
+
+  .u-section-7 .u-text-2 {
+    width: 340px;
+    margin-bottom: 80px;
+  }
+}.u-section-8 .u-sheet-1 {
+  min-height: 100px;
+}
+
+.u-section-8 .u-text-1 {
   font-size: 1.25rem;
   font-weight: normal;
   margin: 39px 20px;
 }
 
 @media (max-width: 1199px) {
-  .u-section-7 .u-text-1 {
+  .u-section-8 .u-text-1 {
     margin-left: 0;
     margin-right: 0;
   }
