--- a/Green-Lab.css
+++ b/Green-Lab.css
@@ -760,6 +760,10 @@
   padding: 0;
 }
 
+.u-section-3 .u-btn-28 {
+  padding: 0;
+}
+
 @media (max-width: 1199px) {
   .u-section-3 .u-sheet-1 {
     min-height: 599px;
